<?xml version="1.0"?>
<package format="2">

  <name>div_datalogger</name>
  <version>0.1.0</version>
  <description>The div_datalogger package</description>


  <maintainer email="panero@student.chalmers.se">Gabriele Panero</maintainer>
  <maintainer email="arasch@student.chalmers.se">Alexander Rasch</maintainer>
  <maintainer email="christian-nils.boda@chalmers.se">Christian-Nils Åkerberg Boda</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/RoadUserInteraction/div_datalogger</url>

  <author email="panero@student.chalmers.se">Gabriele Panero</author>
  <author email="arasch@student.chalmers.se">Alexander Rasch</author>
  <author email="christian-nils.boda@chalmers.se">Christian-Nils Åkerberg Boda</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>urg_node</build_depend>
  <build_depend>phidgets_drivers/phidgets_imu</build_depend>
  <build_depend>nmea_navsat_driver</build_depend>
  <build_depend>cv_camera</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nmea_msgs</build_export_depend>
  <build_export_depend>urg_node</build_export_depend>
  <build_export_depend>phidgets_drivers/phidgets_imu</build_export_depend>
  <build_export_depend>cv_camera</build_export_depend>
  <build_export_depend>nmea_navsat_driver</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>phidgets_drivers/phidgets_imu</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>cv_camera</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
